--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,5 @@
 @import "./init";
-@import '../../node_modules/modern-normalize/modern-normalize.css';
+@import "../../node_modules/modern-normalize/modern-normalize.css";
 
 html {
   font-family: $system-fonts-list;
@@ -32,13 +32,21 @@ button {
   padding: 0;
   width: auto;
   overflow: visible;
-  color: $primary-text;
   outline: none;
   cursor: pointer;
 
   &::-moz-focus-inner {
     border: 0;
   }
+}
+
+.btn {
+  @include font(400, 20px, 120%, $subheader-font);
+  @include size(100%, 40px);
+  color: $background-2;
+  background-color: $secondary-text;
+  text-transform: uppercase;
+  border-radius: $br-default;
 }
 
 a {
@@ -90,7 +98,12 @@ h2 {
     height: 42px;
     border-radius: 50%;
     overflow: hidden;
-    box-shadow: 0px 0px 5px 0px rgba(106, 202, 235, 0.30);
+    box-shadow: 0px 0px 5px 0px rgba(106, 202, 235, 0.3);
+
+    img {
+      @include size(100%);
+      object-fit: cover;
+    }
   }
 
   &__slogan {
@@ -106,7 +119,7 @@ h2 {
     & > h6 {
       @include font(normal, 12px, 15px, $header-font);
       color: $white;
-      text-shadow: 0px 0px 4px #B31A75;
+      text-shadow: 0px 0px 4px #b31a75;
       margin: 0;
     }
   }
@@ -130,6 +143,11 @@ main {
   padding: 0 $gap3;
 }
 
-.title {
-  color: $secondary-text;
+.hero {
+  padding: 30px 0;
+  border-bottom: 1px solid $secondary;
+
+  p {
+    margin: $gap3 0;
+  }
 }
