--- a/src/styles/variables/_variables.scss
+++ b/src/styles/variables/_variables.scss
@@ -31,8 +31,8 @@ $fw-base: 400;
 $fw-semi: 600;
 
 // Line Height
-$lh-base: 1.2;
-$lh-headings: 1.25;
+$lh-base: 120%;
+$lh-headings: 125%;
 
 // Font size
 $fs-base: 14px !default;
